compile (had to remove tests)