@@ -2,12 +2,12 @@ plugins {
     id 'org.jetbrains.intellij' version "0.4.10"
 }
 
-version = '0.82.2-2017.2'
+version = '0.82.2-2017'
 
 patchPluginXml {
     // http://www.jetbrains.org/intellij/sdk/docs/basics/getting_started/build_number_ranges.html
-    sinceBuild = '172.0'
-    untilBuild = '172.*'
+    sinceBuild = '171.0'
+    untilBuild = '173.*'
 
     pluginDescription "Add support for ReasonML language. Also add support for OCaml, and Dune."
     changeNotes """
@@ -59,7 +59,7 @@ allprojects {
 
     runIde {
         systemProperty "refmtWidth", "120"
-        jvmArgs = ['--add-exports=java.base/jdk.internal.vm=ALL-UNNAMED', '-Dcompiler.process.debug.port=5005', '-Xmx1024m']
+        jvmArgs = ['-Dcompiler.process.debug.port=5005', '-Xmx1024m']
     }
 
     task testCompilation(type: Test, group: 'Verification', dependsOn: [classes, testClasses]) {
